# mpi-cpp-docker-dev-env

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
1diff_par/: CMakeLists.txt  main.cpp
1diff_serial/: CMakeLists.txt  main.cpp
basic_1/: CMakeLists.txt  main.cpp
basic_2/: CMakeLists.txt  main.cpp
basic_3/: CMakeLists.txt  main.cpp
hello_world/: CMakeLists.txt  main.cpp
